--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
+astroid==1.6.3
+autopep8==1.3.5
+backports.functools-lru-cache==1.5
 click==6.7
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.5.0
 Flask==0.12
+futures==3.2.0
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.9.5
+lazy-object-proxy==1.3.1
 MarkupSafe==0.23
+mccabe==0.6.1
+numpy==1.14.2
+pandas==0.22.0
+pycodestyle==2.3.1
+pyflakes==1.6.0
+pylint==1.8.4
+python-dateutil==2.7.2
+pytz==2018.4
+singledispatch==3.4.0.3
+six==1.11.0
 Werkzeug==0.11.15
+wrapt==1.10.11
