--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ configparser==3.5.0
 enum34==1.1.6
 flake8==3.5.0
 Flask==0.12
-futures==3.2.0
+futures
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.9.5
