--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ configparser==3.5.0
 enum34==1.1.6
 flake8==3.5.0
 Flask==0.12
-futures
+futures==3.2.0
+gunicorn==19.7.1
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.9.5
